# GamePackageManager

./: .gitignore
back/: .env  config.yaml  package.json  pyproject.toml
back/.devcontainer/: devcontainer.json  docker-compose.yml
back/app/: __main__.py  dependences.py  main.py
back/app/DB_manipulations/: db.py  db_abstract.py  db_initialization.py  db_methods2.py  db_session.py
back/app/dependence/: mydepen.py
back/app/etc/: randomstring.py
back/app/models/: auth_models.py  models.py  req_models.py  resp_models.py
back/app/routers/: authet.py  common.py  users.py
back/packagemanager/: main.py
back/packagemanager/DB_manipulations/: db.py  db_methods.py  db_methods2.py  db_session.py
back/packagemanager/dependence/: mydepen.py
back/packagemanager/etc/: readyaml.py
back/packagemanager/models/: auth_models.py
back/packagemanager/routers/: authet.py  common.py  users.py
back/socnet/: main.py
back/socnet/DB_manipulations/: db.py  db_session.py
back/socnet/dependence/: mydepen.py
back/socnet/routers/: authet.py  common.py  users.py
back/src/: app.module.ts  main.ts
back/src/config/: jwt.config.ts  typeorm.config.ts
front/: .eslintrc.js  .prettierrc  package-lock.json  package.json  tailwind.config.js  tsconfig.json
front/src/: App.tsx  index.scss  index.tsx
front/src/assets/styles/: globals.scss
front/src/components/AdminTable/: AdminTable.module.scss  AdminTable.tsx
front/src/components/ContentWrapper/: ContentWrapper.tsx
front/src/components/Filter/: Filter.module.scss  Filter.tsx
front/src/config/: consts.ts
front/src/hooks/: hooks.ts
front/src/pages/: App.tsx
front/src/services/: Meta.tsx
front/src/shared/: card.ts
front/src/store/: filterSlice.ts  likedSlice.ts  packsApi.ts  store.ts
front/src/utils/: ReduxToast.tsx
(+25 files in other folders)
