[project]
name = ""
version = ""
description = ""
authors = [
    {name = "ReRubis", email = "slesarenkod@gmail.com"},
]
dependencies = [
    "FastAPI>=0.87.0",
    "SQLalchemy>=1.4.44",
]
requires-python = ">=3.11"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.dev-dependencies]
dev = [
    "flake8>=5.0.4",
    "autopep8>=2.0.0",
]
