[project]
name = "packagemanager"
version = "0.1.0"
description = "package storage"
authors = [
    {name = "ReRubis", email = "slesarenkod@gmail.com"},
]
dependencies = [
    "FastAPI>=0.87.0",
    "sqlalchemy>=1.4.44",
    "sqlalchemy-utils>=0.38.3",
    "pyyaml>=6.0",
    "psycopg2>=2.9.5",
    "uvicorn[standard]>=0.20.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.5",
]
requires-python = ">=3.11"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.dev-dependencies]
dev = [
    "flake8>=5.0.4",
    "autopep8>=2.0.0",
]
